@@ -1,6 +1,7 @@
-/* letor_internal.h: The internal Letor Class.
- *
- * Copyright (C) 2011 Parth Gupta
+/** @file letor_internal.h
+ * @brief Internals of Xapian::Letor class
+ */
+/* Copyright (C) 2011 Parth Gupta
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
