@@ -1,3 +1,9 @@
+Wed May 16 07:49:43 GMT 2012  Olly Betts <olly@survex.com>
+
+	* bin/questletor.cc,bin/xapian-letor-update.cc,letor.cc,
+	  letor_internal.cc,letor_internal.h: Sort out standard @file and
+	  @brief for all letor source files.
+
 Wed May 16 06:06:17 GMT 2012  Olly Betts <olly@survex.com>
 
 	* .gitignore: Update.
